src/styles/basic/layout.less
html {
  width: 100%;
  min-height: 100vh;
}

body {
  margin: 0;
  width: 100%;
  min-height: 100vh;
  scroll-behavior: smooth;
  background: @color-background-primary;
  transition: background-color 200ms ease-in-out;
  font-family: MicroSoft Yahei UI, Heiti SC, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

@scrollbar-width: 8px;

body::-webkit-scrollbar {
  width: @scrollbar-width;
  height: @scrollbar-width;
}
body::-webkit-scrollbar-button {
  display: none;
}
body::-webkit-scrollbar-thumb {
  width: @scrollbar-width;
  border-radius: @scrollbar-width;
  background: @color-primary;
}
body::-webkit-scrollbar-track {
  background: @color-background-primary;
}
body::-webkit-scrollbar-corner {
  background: @color-background-primary;
}

.no-scrollbar {
  overflow: hidden;
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

button {
  border: none;
}

button:focus {
  outline: none;
}

#app {
  width: 100%;
  min-height: 100%;
  position: relative;
}

.no-select {
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
}

.desktop-hide {
  display: none;
}

// notify
.el-notification__title {
  color: @color-text-primary;
  font-weight: 600;
	letter-spacing: 0.05em;
}
.el-notification__group {
  margin-left: 7px;
}
.el-notification__closeBtn {
  color: @color-text-primary;
  transition: 100ms ease-in-out;
}
.el-notification__closeBtn:hover {
  cursor: pointer;
  color: lighten(@color-text-primary, 12.5%);
}

// dark mode
.dark {
  html, body, #app {
    background: @color-background-dark;
  }
  body::-webkit-scrollbar-thumb {
    background: darken(@color-primary, 5%);
  }
  body::-webkit-scrollbar-track {
    background: @color-background-dark;
  }
  body::-webkit-scrollbar-corner {
    background: @color-background-dark;
  }
  .el-date-editor {
    input {
      background: lighten(@color-background-dark, 10%);
      border-color: lighten(@color-background-dark, 10%);
    }
	}
	.el-message {
		filter: brightness(0.8);
	}
	.el-notification {
		background: lighten(@color-background-dark, 5%);
		border: lighten(@color-background-dark, 2.5%);
		box-shadow: 0 0 2px rgba(255, 255, 255, 0.05);
	}
	.el-notification__title {
		color: darken(@color-text-primary, 5%);
	}
	.el-notification__closeBtn {
		color: darken(@color-text-primary, 2.5%);
	}
	.el-notification__closeBtn:hover {
		color: lighten(@color-text-primary, 2.5%);
	}
  .el-popover {
    background: lighten(@color-background-dark, 5%);
    border: 1px solid lighten(@color-background-dark, 7.5%);
  }
  .el-popper[x-placement^=bottom] .popper__arrow {
    border-bottom-color: lighten(@color-background-dark, 7.5%);
  }
  .el-popper[x-placement^=bottom] .popper__arrow::after {
    border-bottom-color: lighten(@color-background-dark, 7.5%);
  }
  .el-picker-panel {
    background: lighten(@color-background-dark, 5%);
    border-color: lighten(@color-background-dark, 7.5%);
    .el-picker-panel__icon-btn {
      color: #606266;
    }
    td.disabled div {
      background: lighten(@color-background-dark, 7.5%);
    }
    td.disabled .cell {
      background: lighten(@color-background-dark, 7.5%);
    }
  }
  .el-loading-mask {
    background-color: lighten(@color-background-dark, 2.5%) !important;
  }
}

@media (max-width: 1024px) {
  .el-dialog {
    width: 90%;
  }
}

@media (max-width: 767px) {
  .mobile-hide {
    display: none;
  }
  .desktop-hide {
    display: inherit;
  }
}

@import './form.less';
@import './dialog.less';
@import './tag.less';

